# valico

./: Cargo.toml
src/: lib.rs
src/json_schema/: builder.rs  schema.rs  scope.rs
src/json_schema/keywords/: format.rs  mod.rs  properties.rs
src/json_schema/validators/: properties.rs
